<resources>
    <string name="app_name">Internshala_Pro</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="section_education">Education</string>
    <string name="section_experience">Experience</string>
    <string name="section_projects">Projects</string>

    <string name="user_picture">User picture</string>
    <string name="choose_user_picture">Choose user picture</string>

    <string name="basic_info_edit_email_hint">Your email</string>
    <string name="basic_info_edit_name_hint">Your name</string>

    <string name="add_education">Add education</string>
    <string name="add_experience">Add experience</string>
    <string name="add_project">Add project</string>

    <string name="edit_education">Edit education</string>
    <string name="edit_experience">Edit experience</string>
    <string name="edit_project">Edit project</string>

    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="experience_edit_what_did_you_do_hint">What did you do</string>
    <string name="experience_edit_title_hint">Title</string>
    <string name="experience_edit_company_hint">Company</string>
    <string name="education_edit_school_hint">School</string>
    <string name="education_edit_major_hint">Major</string>
    <string name="education_edit_courses_hint">Courses</string>
    <string name="project_edit_name_hint">Project name</string>
    <string name="project_edit_details_hint">Details</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>

</resources>
