<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.lifeplaytrip.internshala_pro.fragment.Add_Experiance">

    <EditText
        android:id="@+id/experience_edit_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/experience_edit_company_hint" />

    <EditText
        android:id="@+id/experience_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/experience_edit_title_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/experience_edit_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/start_date"
            android:inputType="date" />

        <EditText
            android:id="@+id/experience_edit_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/end_date"
            android:inputType="date" />

    </LinearLayout>

    <EditText
        android:id="@+id/experience_edit_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/experience_edit_what_did_you_do_hint" />

    <TextView
        android:id="@+id/experience_edit_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/action_save"
        android:textColor="#caf70d0d"
        android:textSize="18sp" />

</LinearLayout>
