<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lifeplaytrip.internshala_pro.fragment.Resume">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/user_name_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_toLeftOf="@+id/user_picture"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Your Name"
                    android:textSize="@dimen/caption_text_size" />

                <ImageButton
                    android:id="@+id/edit_basic_info"
                    android:layout_width="@dimen/icon_button_size"
                    android:layout_height="@dimen/icon_button_size"
                    android:layout_marginLeft="@dimen/spacing_xsmall"
                    android:background="?attr/selectableItemBackground"
                    android:src="@drawable/ic_mode_edit_black_18dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/user_name_layout"
                android:layout_toLeftOf="@+id/user_picture"
                android:text="Your email" />

            <ImageView
                android:id="@+id/user_picture"
                android:layout_width="@dimen/user_picture_size"
                android:layout_height="@dimen/user_picture_size"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/user_picture" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/section_education"
                android:textAllCaps="true"
                android:textSize="25sp" />

            <ImageButton
                android:id="@+id/add_education_btn"
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/add_education"
                android:src="@drawable/ic_add_black_18dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/education_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/section_experience"
                android:textAllCaps="true"
                android:textSize="25sp" />

            <ImageButton
                android:id="@+id/add_experience_btn"
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/add_experience"
                android:src="@drawable/ic_add_black_18dp" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/payment_history_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="InvalidId">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/section_projects"
                android:textAllCaps="true"
                android:textSize="25sp" />

            <ImageButton
                android:id="@+id/add_project_btn"
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/add_project"
                android:src="@drawable/ic_add_black_18dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Skills"
                android:textAllCaps="true"
                android:textSize="25sp" />

            <ImageButton
                android:id="@+id/add_skills_btn"
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/add_project"
                android:src="@drawable/ic_add_black_18dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Hobby"
                android:textAllCaps="true"
                android:textSize="25sp" />

            <ImageButton
                android:id="@+id/add_Hobby_btn"
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/add_project"
                android:src="@drawable/ic_add_black_18dp" />

        </LinearLayout>
    </LinearLayout>


</ScrollView>
